--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,10 +20,9 @@
         <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
       </nav>
-      <div class="menu-icon">&#9776;</div>
+      <div class="menu-icon">☰</div>
     </div>
   </header>
-
   <main>
     <!-- Hero -->
     <section id="home" class="split-hero">
@@ -36,16 +37,16 @@
         </div>
       </div>
     </section>
-
     <!-- About Me -->
     <section id="about" class="section">
       <h2 class="section-title accent">About Me</h2>
       <div class="about-wrap">
-        <div>
+        <!-- Wrapped text + interests inside outlined card -->
+        <div class="about-card">
           <p>
             I’m an enthusiastic Mechanical Engineering student passionate about robotics, automation, and Industry 4.0.
             My academic foundation and hands-on industry experiences have shaped me into someone who thrives on solving
-            complex challenges — from designing vibration fixtures for PCB testing to creating ergonomic assistive devices
+            complex challenges, from designing vibration fixtures for PCB testing to creating ergonomic assistive devices
             that make a real impact.
           </p>
           <p>
@@ -53,10 +54,11 @@
             manufacturability</span>. I’m particularly drawn to bridging the gap between design concepts and real-world
             applications through CAD modeling, FEA simulation, and rapid prototyping.
           </p>
-          <ul class="info-list">
+          <ul class="info-list no-bullets">
             <li><b>Interests:</b> Hardware Product Design, DFAM, Human-Robot Interaction, and more 🙂</li>
           </ul>
         </div>
+        <!-- Skills remain separate -->
         <div class="skills-centered">
           <ul class="skills-list">
             <li><b>CAD and Simulation:</b> SolidWorks, AutoCAD, Ansys, Abaqus, Fusion 360, NI Multisim, FEA.</li>
@@ -67,7 +69,6 @@
         </div>
       </div>
     </section>
-
     <!-- Projects -->
     <section id="projects" class="section">
       <h2 class="section-title accent">Projects</h2>
@@ -101,30 +102,26 @@
       </div>
       <div id="modal-bg" class="modal-bg"></div>
     </section>
-
     <!-- Experience -->
-     
     <section id="experience" class="section">
-        <h2 class="section-title accent">Experience</h2>
-        <div class="projects-instructions accent">Click an experience to learn more</div>
-        <div class="exp-list">
-            <div class="exp-card">
-                <div class="exp-header" data-exp="amphenol">
-                    <span class="exp-title accent"><b>Mechanical Integrity Engineering Intern</b></span>
-                    <span class="exp-subtitle">Amphenol Communication Solutions</span>
-                    <span class="exp-dates">May 2025 – Aug 2025</span>
-                </div>
-                <div class="exp-body" id="amphenol-body">
-                    <ul>
-                        <li>Increased reporting efficiency for 15+ projects by automating LLCR data analysis using Minitab and Excel.</li>
-                        <li>Reduced report turnaround time by 30 percent by co-developing a PowerApp integrated with SharePoint for structured customer failure submissions.</li>
-                        <li>Accelerated test setups for 10+ client projects (incl. Cisco) by designing custom vibration fixtures in SolidWorks for complex PCB layouts.</li>
-                        <li>Resolved qualification test failures through root cause analysis, ensuring compliance with ISO standards.</li>
-                    </ul>
-                </div>
-            </div>
-
-
+      <h2 class="section-title accent">Experience</h2>
+      <div class="projects-instructions accent">Click an experience to learn more</div>
+      <div class="exp-list">
+        <div class="exp-card">
+          <div class="exp-header" data-exp="amphenol">
+            <span class="exp-title accent"><b>Mechanical Integrity Engineering Intern</b></span>
+            <span class="exp-subtitle">Amphenol Communication Solutions</span>
+            <span class="exp-dates">May 2025 – Aug 2025</span>
+          </div>
+          <div class="exp-body" id="amphenol-body">
+            <ul>
+              <li>Increased reporting efficiency for 15+ projects by automating LLCR data analysis using Minitab and Excel.</li>
+              <li>Reduced report turnaround time by 30 percent by co-developing a PowerApp integrated with SharePoint for structured customer failure submissions.</li>
+              <li>Accelerated test setups for 10+ client projects (incl. Cisco) by designing custom vibration fixtures in SolidWorks for complex PCB layouts.</li>
+              <li>Resolved qualification test failures through root cause analysis, ensuring compliance with ISO standards.</li>
+            </ul>
+          </div>
+        </div>
         <div class="exp-card">
           <div class="exp-header" data-exp="shape">
             <span class="exp-title accent"><b>Research Assistant</b></span>
@@ -139,7 +136,6 @@
             </ul>
           </div>
         </div>
-
         <div class="exp-card">
           <div class="exp-header" data-exp="origin">
             <span class="exp-title accent"><b>Lab Technician</b></span>
@@ -154,7 +150,6 @@
             </ul>
           </div>
         </div>
-
         <div class="exp-card">
           <div class="exp-header" data-exp="asme">
             <span class="exp-title accent"><b>Design Team Officer / Project Lead</b></span>
@@ -170,7 +165,6 @@
         </div>
       </div>
     </section>
-
     <!-- Contact -->
     <section id="contact" class="section">
       <h2 class="section-title accent">Contact</h2>
@@ -189,11 +183,9 @@
       </div>
     </section>
   </main>
-
   <footer class="footer">
     &copy; 2025 Atharva Joshi. Built for Penn State ME Portfolio.
   </footer>
-
   <script src="portfolio.js"></script>
 </body>
 </html>
